# LP1

./: CMakeLists.txt  Plataforma_WEB.vpp.bak_000f  main.c  pr01.c  pr01.h  pr03.c  pr03.h  pr05.c  pr05.h  pr06.c  pr06.h  pr07.c  pr07.h  pr08.c  pr08.h  tp01.c  tp01.h  tp02.c  tp02.h  tp03.c  tp03.h  tp04.c  tp04.h  tp05.c  tp05.h  tp06.c  tp06.h  tp09.c  tp09.h  tp10.c  tp10.h  tp11.c  tp11.h  tp12.c  tp12.h  untitled2.vpp.bak_000f
data/: rects.txt
