cmake_minimum_required(VERSION 3.20)
project(LP1 C)

set(CMAKE_C_STANDARD 99)

add_executable(LP1 main.c tp01.c tp01.h pr01.c pr01.h tp02.c tp02.h tp03.c tp03.h pr03.c pr03.h tp04.c tp04.h tp05.c tp05.h pr05.c pr05.h pr06.c pr06.h pr07.c pr07.h tp06.c tp06.h tp09.c tp09.h tp10.c tp10.h tp11.c tp11.h tp09.c tp09.h tp12.c tp12.h pr08.c pr08.h)
